fix footer logo align and company-line text-size

--- a/styles.css
+++ b/styles.css
@@ -203,5 +203,6 @@ section h3 {
 }
 
 .company-line {
-  font-size: 5px;
+  font-size: 15px;
+  text-align: start;
 }
